PYIC-8235: Fix sonarcloud issues